--- a/index.html
+++ b/index.html
@@ -28,6 +28,72 @@
     <div class="container-fluid">
         <h3 class="text-center py-3">LOGO</h3>
     </div>
+
+    <!--Botonera-->
+    <div class="container-fluid  bg-light">
+		
+		<div class="container">
+
+			<ul class="nav nav-justified py-2 nav-pills">
+
+				<li class="nav-item">
+					<a class="nav-link" href="registro.html">Registro</a>
+				</li>
+
+				<li class="nav-item">
+					<a class="nav-link" href="ingreso.html">Ingreso</a>
+				</li>
+
+				<li class="nav-item">
+					<a class="nav-link active" href="index.html">Inicio</a>
+				</li>
+
+				<li class="nav-item">
+					<a class="nav-link" href="#">Salir</a>
+				</li>
+
+			</ul>
+
+		</div>
+
+	</div>
+
+    <!--Contenido-->
+
+    <div class="container-fluid">
+		
+		<div class="container py-5">
+
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>Nombre</th>
+						<th>Apellido</th>
+						<th>Email</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>John</td>
+						<td>Doe</td>
+						<td>john@example.com</td>
+					</tr>
+					<tr>
+						<td>Mary</td>
+						<td>Moe</td>
+						<td>mary@example.com</td>
+					</tr>
+					<tr>
+						<td>July</td>
+						<td>Dooley</td>
+						<td>july@example.com</td>
+					</tr>
+				</tbody>
+			</table>
+
+		</div>
+
+	</div>
     
 </body>
 </html>
